# BearPiano_RPI

./: .gitignore  CMakeLists.txt  README.md
include/: bluetooth.h
src/: bluetooth.cpp  main.cpp
